<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/login_top_bg"
        android:orientation="vertical">

        <com.sskj.common.view.ToolBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="登录" />

    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="38dp"
            android:layout_marginRight="38dp"
            android:orientation="vertical">

            <com.sskj.common.tab.TabLayout
                android:id="@+id/typeTabLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                app:indicator_color="@color/common_tip"
                app:indicator_width="30dp"
                app:selctTextSize="16sp"
                app:textSelectColor="@color/common_tip"
                app:textUnselectColor="@color/common_normal_text"
                app:textsize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/common_divider" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/common_edt_line_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/account_img"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/login_icon_mobile" />

                <EditText
                    android:id="@+id/mobile_edt"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:drawablePadding="10dp"
                    android:hint="@string/login_input_mobile"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:textColor="@color/common_text"
                    android:textColorHint="@color/common_hint"
                    android:textSize="14sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/common_edt_line_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/login_icon_ps" />

                <EditText
                    android:id="@+id/ps_edt"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawablePadding="10dp"
                    android:hint="@string/login_input_loagin_ps"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/common_text"
                    android:textColorHint="@color/common_hint"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/show_ps_img"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/common_icon_hide" />

            </LinearLayout>


            <TextView
                android:id="@+id/forget_ps"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="right|center_vertical"
                android:text="忘记密码"
                android:textColor="@color/common_text" />


            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:textSize="13sp"
                android:background="@drawable/common_tip_50"
                android:text="@string/login_login_btn"
                android:textColor="@color/common_button_text" />

            <TextView
                android:id="@+id/register_tv"
                android:layout_marginTop="10dp"
                android:textColor="@color/common_text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:textSize="13sp"
                android:text="还没有账号?立即注册" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</LinearLayout>